[25] JEP 513 - Flexible Constructor Bodies
feature is graduating
+ more optimistically use new code
  - if things go wrong report feature disabled, rather than old error
+ avoid some old errors that would be "duplicates" of new ones