@@ -19,6 +19,7 @@ package org.eclipse.jdt.core.tests.compiler.regression;
 import java.io.IOException;
 import java.util.Map;
 import junit.framework.Test;
+import org.eclipse.jdt.core.JavaCore;
 import org.eclipse.jdt.core.util.ClassFileBytesDisassembler;
 import org.eclipse.jdt.core.util.ClassFormatException;
 import org.eclipse.jdt.internal.compiler.batch.FileSystem;
@@ -27,8 +28,6 @@ import org.eclipse.jdt.internal.compiler.impl.CompilerOptions;
 
 public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 
-	private static final JavacTestOptions JAVAC_OPTIONS = new JavacTestOptions("--enable-preview -source 25");
-	private static final String[] VMARGS = new String[] {"--enable-preview"};
 	static {
 //		TESTS_NUMBERS = new int [] { 1 };
 //		TESTS_RANGE = new int[] { 1, -1 };
@@ -65,8 +64,6 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 		defaultOptions.put(CompilerOptions.OPTION_Compliance, CompilerOptions.VERSION_25);
 		defaultOptions.put(CompilerOptions.OPTION_Source, CompilerOptions.VERSION_25);
 		defaultOptions.put(CompilerOptions.OPTION_TargetPlatform, CompilerOptions.VERSION_25);
-		defaultOptions.put(CompilerOptions.OPTION_EnablePreviews, preview ? CompilerOptions.ENABLED : CompilerOptions.DISABLED);
-		defaultOptions.put(CompilerOptions.OPTION_ReportPreviewFeatures, CompilerOptions.WARNING);
 		return defaultOptions;
 	}
 
@@ -94,35 +91,27 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 	}
 	@Override
 	protected void runConformTest(String[] testFiles, String expectedOutput) {
-		runConformTest(testFiles, expectedOutput, getCompilerOptions(true), VMARGS, JAVAC_OPTIONS);
+		runConformTest(testFiles, expectedOutput, getCompilerOptions(true));
 	}
 	@Override
 	protected void runConformTest(String[] testFiles, String expectedOutput, Map<String, String> customOptions) {
 		if(!isJRE22Plus)
 			return;
-		runConformTest(testFiles, expectedOutput, customOptions, VMARGS, JAVAC_OPTIONS);
+		runConformTest(testFiles, expectedOutput, customOptions, new String[0], JavacTestOptions.DEFAULT);
 	}
 	protected void runNegativeTest(String[] testFiles, String expectedCompilerLog) {
 		Map<String, String> customOptions = getCompilerOptions(true);
 		Runner runner = new Runner();
 		runner.testFiles = testFiles;
 		runner.expectedCompilerLog = expectedCompilerLog;
-		runner.javacTestOptions = JAVAC_OPTIONS;
 		runner.customOptions = customOptions;
 		runner.expectedJavacOutputString = null;
 		runner.runNegativeTest();
 	}
 	class Runner extends AbstractRegressionTest.Runner {
-		public Runner(boolean reportPreview) {
-			this();
-			this.customOptions.put(CompilerOptions.OPTION_ReportPreviewFeatures, reportPreview ? CompilerOptions.WARNING : CompilerOptions.IGNORE);
-		}
 		public Runner() {
 			super();
-			this.vmArguments = VMARGS;
-			this.javacTestOptions = JAVAC_OPTIONS;
 			this.customOptions = getCompilerOptions();
-			this.customOptions.put(CompilerOptions.OPTION_EnablePreviews, CompilerOptions.ENABLED);
 		}
 	}
 	public void test001() {
@@ -150,12 +139,7 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
       			"""
 			},
 			"----------\n" +
-			"1. WARNING in X.java (at line 12)\n" +
-			"	super(value);\n" +
-			"	^^^^^^^^^^^^^\n" +
-			"You are using a preview language feature that may or may not be supported in a future release\n" +
-			"----------\n" +
-			"2. ERROR in X.java (at line 16)\n" +
+			"1. ERROR in X.java (at line 16)\n" +
 			"	Zork();\n" +
 			"	^^^^\n" +
 			"The method Zork() is undefined for the type X\n" +
@@ -318,11 +302,6 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 				"	System.out.print(this);     // Error\n" +
 				"	                 ^^^^\n" +
 				"Cannot use 'this' in an early construction context\n" +
-				"----------\n" +
-				"4. WARNING in X.java (at line 7)\n" +
-				"	super();\n" +
-				"	^^^^^^^^\n" +
-				"You are using a preview language feature that may or may not be supported in a future release\n" +
 				"----------\n");
 	}
 	// any field access, method invocation, or method reference
@@ -347,11 +326,6 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 			"	super.i++;                  // Error\n" +
 			"	^^^^^\n" +
 			"Cannot use 'super' in an early construction context (except in a simple field assignment)\n" +
-			"----------\n" +
-			"2. WARNING in X.java (at line 7)\n" +
-			"	super();\n" +
-			"	^^^^^^^^\n" +
-			"You are using a preview language feature that may or may not be supported in a future release\n" +
 			"----------\n"
 		);
 	}
@@ -364,7 +338,7 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 					class D {
 						int i;
 					}
-					class X {
+					public class X {
 						X() {
 							class E extends D {
 								E() {
@@ -385,7 +359,7 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 	}
 	public void test007c() {
 		// but no access to outer this from local class
-		Runner runner = new Runner(false);
+		Runner runner = new Runner();
 		runner.testFiles = new String[] {
 				"X.java",
 				"""
@@ -414,11 +388,11 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 	}
 	public void test007d() {
 		// early construction context of far outer, while inners happily use 'this'
-		Runner runner = new Runner(false);
+		Runner runner = new Runner();
 		runner.testFiles = new String[] {
 				"X.java",
 				"""
-					class X {
+					public class X {
 						X() {
 							class E {
 								E() {
@@ -470,11 +444,6 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 			"	hashCode();                 // Error\n" +
 			"	^^^^^^^^^^\n" +
 			"Cannot invoke method hashCode() in an early construction context\n" +
-			"----------\n" +
-			"3. WARNING in X.java (at line 6)\n" +
-			"	super();\n" +
-			"	^^^^^^^^\n" +
-			"You are using a preview language feature that may or may not be supported in a future release\n" +
 			"----------\n");
 	}
 	public void test008_OK() {
@@ -525,11 +494,6 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 			"	C.this.c++;             // Error - same instance\n" +
 			"	^^^^^^^^\n" +
 			"Cannot read field c in an early construction context\n" +
-			"----------\n" +
-			"2. WARNING in B.java (at line 6)\n" +
-			"	super();\n" +
-			"	^^^^^^^^\n" +
-			"You are using a preview language feature that may or may not be supported in a future release\n" +
 			"----------\n");
 	}
 	public void test009_OK() {
@@ -603,11 +567,6 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 			"	new Inner(); // Error - \'this\' is enclosing instance\n" +
 			"	^^^^^^^^^^^\n" +
 			"Cannot instantiate class Outer.Inner in an early construction context of class Outer\n" +
-			"----------\n" +
-			"2. WARNING in X.java (at line 5)\n" +
-			"	super();\n" +
-			"	^^^^^^^^\n" +
-			"You are using a preview language feature that may or may not be supported in a future release\n" +
 			"----------\n");
 	}
 	public void test011_inherited() {
@@ -631,11 +590,6 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 				new Inner(); // Error - 'this' is enclosing instance
 				^^^^^^^^^^^
 			Cannot instantiate class Super.Inner in an early construction context of class Outer
-			----------
-			2. WARNING in X.java (at line 7)
-				super();
-				^^^^^^^^
-			You are using a preview language feature that may or may not be supported in a future release
 			----------
 			""");
 	}
@@ -686,11 +640,6 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 			"	var tmp = new S() { };      // Error\n" +
 			"	          ^^^^^^^^^^^\n" +
 			"Cannot instantiate class new X.S(){} in an early construction context of class X\n" +
-			"----------\n" +
-			"2. WARNING in X.java (at line 5)\n" +
-			"	super();\n" +
-			"	^^^^^^^^\n" +
-			"You are using a preview language feature that may or may not be supported in a future release\n" +
 			"----------\n");
 	}
 	/* in a pre-construction context, class instance creation expressions that declare
@@ -874,11 +823,6 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 			"	return; // Error - return not allowed here\n" +
 			"	^^^^^^^\n" +
 			"return; statement not allowed in an early construction context\n" +
-			"----------\n" +
-			"2. WARNING in X.java (at line 10)\n" +
-			"	super(i);\n" +
-			"	^^^^^^^^^\n" +
-			"You are using a preview language feature that may or may not be supported in a future release\n" +
 			"----------\n");
 	}
 	/* It is a compile-time error if a return statement appears in the prologue of a constructor body.
@@ -908,11 +852,6 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 			"	return; // Error - return not allowed here\n" +
 			"	^^^^^^^\n" +
 			"return; statement not allowed in an early construction context\n" +
-			"----------\n" +
-			"2. WARNING in X.java (at line 5)\n" +
-			"	this(i, 0);\n" +
-			"	^^^^^^^^^^^\n" +
-			"You are using a preview language feature that may or may not be supported in a future release\n" +
 			"----------\n");
 	}
 	/* Throwing an exception in a prologue of a constructor body is permitted.
@@ -1029,16 +968,6 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 			"	int j = a.i;\n" +
 			"	        ^\n" +
 			"Cannot read field a in an early construction context\n" +
-			"----------\n" +
-			"2. WARNING in X.java (at line 13)\n" +
-			"	this.b = j == 0;\n" +
-			"	^^^^^^\n" +
-			"You are using a preview language feature that may or may not be supported in a future release\n" +
-			"----------\n" +
-			"3. WARNING in X.java (at line 14)\n" +
-			"	super();\n" +
-			"	^^^^^^^^\n" +
-			"You are using a preview language feature that may or may not be supported in a future release\n" +
 			"----------\n");
 	}
 	/* Its an error of this is used in super(this) - no change for this error
@@ -1101,11 +1030,6 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 			"	I tos = super::toString;\n" +
 			"	        ^^^^^\n" +
 			"Cannot use 'super' in an early construction context\n" +
-			"----------\n" +
-			"2. WARNING in X.java (at line 9)\n" +
-			"	this(i, 0);\n" +
-			"	^^^^^^^^^^^\n" +
-			"You are using a preview language feature that may or may not be supported in a future release\n" +
 			"----------\n");
 	}
 	public void test027() {
@@ -1139,16 +1063,6 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 			"	int j = a.getI();\n" +
 			"	        ^\n" +
 			"Cannot read field a in an early construction context\n" +
-			"----------\n" +
-			"2. WARNING in X.java (at line 14)\n" +
-			"	this.b = j == 0;\n" +
-			"	^^^^^^\n" +
-			"You are using a preview language feature that may or may not be supported in a future release\n" +
-			"----------\n" +
-			"3. WARNING in X.java (at line 15)\n" +
-			"	super();\n" +
-			"	^^^^^^^^\n" +
-			"You are using a preview language feature that may or may not be supported in a future release\n" +
 			"----------\n");
 	}
 	public void test028() {
@@ -1179,11 +1093,6 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 			"	int j = J.super.getI();\n" +
 			"	        ^^^^^^^\n" +
 			"Cannot use 'J.super' in an early construction context\n" +
-			"----------\n" +
-			"2. WARNING in X.java (at line 9)\n" +
-			"	super();\n" +
-			"	^^^^^^^^\n" +
-			"You are using a preview language feature that may or may not be supported in a future release\n" +
 			"----------\n");
 	}
 	public void test029() {
@@ -1214,11 +1123,6 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 			"	int j = J.super.getI();\n" +
 			"	        ^^^^^^^\n" +
 			"Cannot use 'J.super' in an early construction context\n" +
-			"----------\n" +
-			"2. WARNING in X.java (at line 9)\n" +
-			"	this(j);\n" +
-			"	^^^^^^^^\n" +
-			"You are using a preview language feature that may or may not be supported in a future release\n" +
 			"----------\n");
 	}
 	public void test030() {
@@ -1528,9 +1432,12 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 		);
 	}
 	public void test040() {
-		Map<String, String> options = getCompilerOptions();
-		options.put(CompilerOptions.OPTION_EnablePreviews, CompilerOptions.DISABLED);
-		runNegativeTest(new String[] {
+		Runner runner = new Runner();
+		runner.customOptions.put(CompilerOptions.OPTION_Source, "24");
+		runner.customOptions.put(CompilerOptions.OPTION_Compliance, "24");
+		runner.customOptions.put(CompilerOptions.OPTION_TargetPlatform, "24");
+		runner.javacTestOptions = JavacTestOptions.forRelease(JavaCore.VERSION_24);
+		runner.testFiles = new String[] {
 				"X.java",
 					"""
 						class Y {
@@ -1548,19 +1455,20 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 						    }
 						}
 					"""
-			},
-			"----------\n" +
-			"1. ERROR in X.java (at line 12)\n" +
-			"	super(value);\n" +
-			"	^^^^^^^^^^^^^\n" +
-			"Flexible Constructor Bodies is a preview feature and disabled by default. Use --enable-preview to enable\n" +
-			"----------\n",
-			null,
-			true,
-			options);
+			};
+		runner.expectedCompilerLog =
+			"""
+			----------
+			1. ERROR in X.java (at line 12)
+				super(value);
+				^^^^^^^^^^^^^
+			The Java feature 'Flexible Constructor Bodies' is only available with source level 25 and above
+			----------
+			""";
+		runner.runNegativeTest();
 	}
 	public void testGH2467() {
-		Runner runner = new Runner(false);
+		Runner runner = new Runner();
 		runner.testFiles = new String[] {
 				"Test3.java",
 				"""
@@ -1586,7 +1494,7 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 		runner.runNegativeTest();
 	}
 	public void testOuterConstruction_1() {
-		Runner runner = new Runner(false);
+		Runner runner = new Runner();
 		runner.testFiles = new String[] {
 				"Test.java",
 				"""
@@ -1619,7 +1527,7 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 	}
 
 	public void testOuterConstruction_2() {
-		Runner runner = new Runner(false);
+		Runner runner = new Runner();
 		runner.testFiles = new String[] {
 				"Test.java",
 				"""
@@ -1644,7 +1552,7 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 		runner.runConformTest();
 	}
 	public void testFieldAssignedInSuperArgument_OK() {
-		Runner runner = new Runner(false);
+		Runner runner = new Runner();
 		runner.testFiles = new String[] {
 				"Test.java",
 				"""
@@ -1680,7 +1588,7 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 		runner.runConformTest();
 	}
 	public void testFieldAssignedInSuperArgument_NOK_superclass() {
-		Runner runner = new Runner(false);
+		Runner runner = new Runner();
 		runner.testFiles = new String[] {
 				"Test.java",
 				"""
@@ -1738,7 +1646,7 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 		runner.runNegativeTest();
 	}
 	public void testFieldAssignedInSuperArgument_NOK_hasInitializer() {
-		Runner runner = new Runner(false);
+		Runner runner = new Runner();
 		runner.testFiles = new String[] {
 				"Test.java",
 				"""
@@ -1797,9 +1705,10 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 	}
 	public void testFieldAssignedInSuperArgument_notEnabled() {
 		Runner runner = new Runner();
-		runner.customOptions = getCompilerOptions();
-		runner.customOptions.put(CompilerOptions.OPTION_ReportPreviewFeatures, CompilerOptions.IGNORE);
-		runner.javacTestOptions = JavacTestOptions.DEFAULT;
+		runner.customOptions.put(CompilerOptions.OPTION_Source, "24");
+		runner.customOptions.put(CompilerOptions.OPTION_Compliance, "24");
+		runner.customOptions.put(CompilerOptions.OPTION_TargetPlatform, "24");
+		runner.javacTestOptions = JavacTestOptions.forRelease(JavaCore.VERSION_24);
 		runner.testFiles = new String[] {
 				"Test.java",
 				"""
@@ -1826,42 +1735,32 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 				"""
 			};
 		runner.expectedCompilerLog = """
-				----------
-				1. ERROR in Test.java (at line 7)
-					super(i=n);				// old syntax, single name reference
-					      ^
-				Flexible Constructor Bodies is a preview feature and disabled by default. Use --enable-preview to enable
-				----------
-				2. ERROR in Test.java (at line 10)
-					super(this.i=n);		// old syntax, this-qualified field reference
-					      ^^^^^^
-				Flexible Constructor Bodies is a preview feature and disabled by default. Use --enable-preview to enable
-				----------
-				3. ERROR in Test.java (at line 14)
-					super(i=s);				// new syntax, single name reference
-					^^^^^^^^^^^
-				Flexible Constructor Bodies is a preview feature and disabled by default. Use --enable-preview to enable
-				----------
-				4. ERROR in Test.java (at line 14)
-					super(i=s);				// new syntax, single name reference
-					      ^
-				Flexible Constructor Bodies is a preview feature and disabled by default. Use --enable-preview to enable
-				----------
-				5. ERROR in Test.java (at line 18)
-					super(this.i=s);		// new syntax, this-qualified field reference
-					^^^^^^^^^^^^^^^^
-				Flexible Constructor Bodies is a preview feature and disabled by default. Use --enable-preview to enable
-				----------
-				6. ERROR in Test.java (at line 18)
-					super(this.i=s);		// new syntax, this-qualified field reference
-					      ^^^^^^
-				Flexible Constructor Bodies is a preview feature and disabled by default. Use --enable-preview to enable
-				----------
-				""";
+			----------
+			1. ERROR in Test.java (at line 7)
+				super(i=n);				// old syntax, single name reference
+				      ^
+			Cannot refer to an instance field i while explicitly invoking a constructor
+			----------
+			2. ERROR in Test.java (at line 10)
+				super(this.i=n);		// old syntax, this-qualified field reference
+				      ^^^^^^
+			The Java feature 'Flexible Constructor Bodies' is only available with source level 25 and above
+			----------
+			3. ERROR in Test.java (at line 14)
+				super(i=s);				// new syntax, single name reference
+				^^^^^^^^^^^
+			The Java feature 'Flexible Constructor Bodies' is only available with source level 25 and above
+			----------
+			4. ERROR in Test.java (at line 18)
+				super(this.i=s);		// new syntax, this-qualified field reference
+				^^^^^^^^^^^^^^^^
+			The Java feature 'Flexible Constructor Bodies' is only available with source level 25 and above
+			----------
+			""";
 		runner.runNegativeTest();
 	}
 	public void testFieldCompoundAssignedInSuperArgument() {
-		Runner runner = new Runner(false);
+		Runner runner = new Runner();
 		runner.testFiles = new String[] {
 				"Test.java",
 				"""
@@ -1913,7 +1812,7 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 		runner.runNegativeTest();
 	}
 	public void testFieldReadInSuperArgument() {
-		Runner runner = new Runner(false);
+		Runner runner = new Runner();
 		runner.testFiles = new String[] {
 				"Test.java",
 				"""
@@ -2002,7 +1901,7 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 		runner.testFiles = new String[] {
 			"C1.java",
 			"""
-			class C1 {
+			public class C1 {
 				String f1 = "f1";
 			    C1() {
 			        super();
@@ -2032,8 +1931,6 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 		        }
 			}
 			"""};
-		runner.vmArguments = VMARGS;
-		runner.javacTestOptions = JAVAC_OPTIONS;
 		runner.expectedOutputString = "f3f1";
 		runner.runConformTest();
 	}
@@ -2074,18 +1971,13 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 					                 ^^
 				Cannot read field f2 in an early construction context
 				----------
-				2. WARNING in C1.java (at line 18)
-					super();
-					^^^^^^^^
-				You are using a preview language feature that may or may not be supported in a future release
-				----------
 				""";
 		runner.runNegativeTest();
 	}
 
 	public void testDuplicateCalls() {
 		// but no access to outer this from local class
-		Runner runner = new Runner(false);
+		Runner runner = new Runner();
 		runner.testFiles = new String[] {
 				"X.java",
 				"""
@@ -2108,7 +2000,7 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 	}
 
 	public void testGH2464() {
-		Runner runner = new Runner(false);
+		Runner runner = new Runner();
 		runner.testFiles = new String[] {
 				"Test.java",
 				"""
@@ -2148,7 +2040,7 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 	}
 
 	public void testGH2468() {
-		Runner runner = new Runner(false);
+		Runner runner = new Runner();
 		runner.testFiles = new String[] {
 				"TestFlow.java",
 				"""
@@ -2180,7 +2072,7 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 	}
 
 	public void testGH666() {
-		Runner runner = new Runner(false);
+		Runner runner = new Runner();
 		runner.testFiles = new String[] {
 				"TestFlow.java",
 				"""
@@ -2206,7 +2098,7 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 	}
 
 	public void testGH3094() {
-		Runner runner = new Runner(false);
+		Runner runner = new Runner();
 		runner.testFiles = new String[] {
 				"X.java",
 				"""
@@ -2235,7 +2127,7 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 	}
 
 	public void testGH3094_2() {
-		Runner runner = new Runner(false);
+		Runner runner = new Runner();
 		runner.testFiles = new String[] {
 				"X.java",
 				"""
@@ -2264,7 +2156,7 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 	}
 
 	public void testGH3094_3() {
-		Runner runner = new Runner(false);
+		Runner runner = new Runner();
 		runner.testFiles = new String[] {
 				"X.java",
 				"""
@@ -2437,17 +2329,12 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 			},
 			"""
 			----------
-			1. WARNING in Outer.java (at line 10)
-				super();
-				^^^^^^^^
-			You are using a preview language feature that may or may not be supported in a future release
-			----------
-			2. ERROR in Outer.java (at line 13)
+			1. ERROR in Outer.java (at line 13)
 				new Foo().g();
 				^^^^^^^^^
 			Cannot instantiate local class 'Foo' in a static context
 			----------
-			3. ERROR in Outer.java (at line 16)
+			2. ERROR in Outer.java (at line 16)
 				Supplier<Foo> sfoo = Foo::new;
 				                     ^^^^^^^^
 			Cannot instantiate local class 'Foo' in a static context
@@ -2541,7 +2428,7 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 		runner.testFiles = new String[] {
 			"X.java",
 			"""
-			class X {
+			public class X {
 				final int final_field;
 				int x;
 				{ x = final_field; } // Error: The blank final field final_field may not have been initialized
@@ -2703,7 +2590,7 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 					"""
 				},
 				"");
-		verifyClassFile("version 25 : 69.65535", "X.class", ClassFileBytesDisassembler.SYSTEM);
+		verifyClassFile("version 25 : 69.0", "X.class", ClassFileBytesDisassembler.SYSTEM);
 	}
 
 	public void testFieldAssignment_OK() throws Exception {
@@ -2749,16 +2636,6 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 		},
 		"""
 		----------
-		1. WARNING in X.java (at line 4)
-			s = s0;
-			^
-		You are using a preview language feature that may or may not be supported in a future release
-		----------
-		2. WARNING in X.java (at line 5)
-			super();
-			^^^^^^^^
-		You are using a preview language feature that may or may not be supported in a future release
-		----------
 		3. ERROR in X.java (at line 7)
 			X() {
 			^^^
@@ -2789,25 +2666,10 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 		},
 		"""
 		----------
-		1. WARNING in X.java (at line 4)
-			s = s0;
-			^
-		You are using a preview language feature that may or may not be supported in a future release
-		----------
-		2. WARNING in X.java (at line 5)
-			super();
-			^^^^^^^^
-		You are using a preview language feature that may or may not be supported in a future release
-		----------
-		3. ERROR in X.java (at line 8)
+		1. ERROR in X.java (at line 8)
 			Runnable r = () -> s = "";
 			                   ^
 		Cannot assign field 's' inside a lambda expression within an early construction context of class X
-		----------
-		4. WARNING in X.java (at line 9)
-			super();
-			^^^^^^^^
-		You are using a preview language feature that may or may not be supported in a future release
 		----------
 		""");
 	}
@@ -2841,16 +2703,6 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 		},
 		"""
 		----------
-		1. WARNING in X.java (at line 4)
-			s = s0;
-			^
-		You are using a preview language feature that may or may not be supported in a future release
-		----------
-		2. WARNING in X.java (at line 5)
-			super();
-			^^^^^^^^
-		You are using a preview language feature that may or may not be supported in a future release
-		----------
 		3. ERROR in X.java (at line 9)
 			public void run() { s = "Anonymous"; };
 			                    ^
@@ -2860,11 +2712,6 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 			s = "Local";
 			^
 		Cannot assign field 's' from class 'X' in an early construction context
-		----------
-		5. WARNING in X.java (at line 16)
-			super();
-			^^^^^^^^
-		You are using a preview language feature that may or may not be supported in a future release
 		----------
 		""");
 	}
@@ -3164,16 +3011,6 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 				^^^^
 			The final field fin1 may already have been assigned
 			----------
-			2. WARNING in X.java (at line 9)
-				this(fin1 = 10);
-				^^^^^^^^^^^^^^^^
-			You are using a preview language feature that may or may not be supported in a future release
-			----------
-			3. WARNING in X.java (at line 9)
-				this(fin1 = 10);
-				     ^^^^
-			You are using a preview language feature that may or may not be supported in a future release
-			----------
 			4. ERROR in X.java (at line 10)
 				fin2 = 11;
 				^^^^
@@ -3207,11 +3044,6 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 				fin1 = 0;
 				^^^^
 			The final field fin1 may already have been assigned
-			----------
-			2. WARNING in X.java (at line 9)
-				this(fin1 = 10);
-				     ^^^^
-			You are using a preview language feature that may or may not be supported in a future release
 			----------
 			3. ERROR in X.java (at line 10)
 				fin2 = 11;
@@ -3356,11 +3188,6 @@ public class SuperAfterStatementsTest extends AbstractRegressionTest9 {
 			X.value = new Inner() { // This is reported by Javac
 			          ^^^^^^^^^^^
 		No enclosing instance of type Local is accessible. Must qualify the allocation with an enclosing instance of type Local (e.g. x.new A() where x is an instance of Local).
-		----------
-		3. WARNING in X.java (at line 12)
-			super();
-			^^^^^^^^
-		You are using a preview language feature that may or may not be supported in a future release
 		----------
 		""");
 	}
